interim update to notebooks

--- a/docs/tutorials/ET_irradiance.ipynb
+++ b/docs/tutorials/ET_irradiance.ipynb
@@ -161,7 +161,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x105fa310>"
+       "<matplotlib.legend.Legend at 0x105fc350>"
       ]
      },
      "execution_count": 7,
@@ -858,7 +858,7 @@
        "XNAAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1059f050>"
+       "<matplotlib.figure.Figure at 0x105a1110>"
       ]
      },
      "metadata": {},
@@ -895,7 +895,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000 loops, best of 3: 214 µs per loop\n"
+      "1000 loops, best of 3: 244 µs per loop\n"
      ]
     }
    ],
@@ -916,7 +916,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 loops, best of 3: 186 µs per loop\n"
+      "1000 loops, best of 3: 195 µs per loop\n"
      ]
     }
    ],
@@ -937,7 +937,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 loops, best of 3: 19.3 ms per loop\n"
+      "100 loops, best of 3: 18.6 ms per loop\n"
      ]
     }
    ],
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -990,11 +990,19 @@
         {
          "module": "matplotlib",
          "version": "1.4.3"
+        },
+        {
+         "module": "pandas",
+         "version": "0.15.2"
+        },
+        {
+         "module": "pvlib",
+         "version": "0.2.0dev"
         }
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td colspan='2'>Sun Jun 21 22:07:05 2015 South Africa Standard Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Wed Jun 24 21:26:58 2015 South Africa Standard Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -1005,7 +1013,9 @@
        "numpy & 1.9.2 \\\\ \\hline\n",
        "scipy & 0.15.1 \\\\ \\hline\n",
        "matplotlib & 1.4.3 \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Sun Jun 21 22:07:05 2015 South Africa Standard Time} \\\\ \\hline\n",
+       "pandas & 0.15.2 \\\\ \\hline\n",
+       "pvlib & 0.2.0dev \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Wed Jun 24 21:26:58 2015 South Africa Standard Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -1016,10 +1026,12 @@
        "numpy 1.9.2\n",
        "scipy 0.15.1\n",
        "matplotlib 1.4.3\n",
-       "Sun Jun 21 22:07:05 2015 South Africa Standard Time"
+       "pandas 0.15.2\n",
+       "pvlib 0.2.0dev\n",
+       "Wed Jun 24 21:26:58 2015 South Africa Standard Time"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
