--- a/docs/tutorials/atmosphere.ipynb
+++ b/docs/tutorials/atmosphere.ipynb
@@ -107,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x107238b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1074ddf0>"
       ]
      },
      "execution_count": 5,
@@ -662,7 +662,7 @@
        "QmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0xe831e10>"
+       "<matplotlib.figure.Figure at 0xe762e90>"
       ]
      },
      "metadata": {},
@@ -1216,7 +1216,7 @@
        "QmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10723bb0>"
+       "<matplotlib.figure.Figure at 0x1074dc10>"
       ]
      },
      "metadata": {},
@@ -1522,7 +1522,7 @@
        "ERGRKqYgFxERqWIKchERkSr2/wGRLqzIaOGBQgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108689b0>"
+       "<matplotlib.figure.Figure at 0x109068b0>"
       ]
      },
      "metadata": {},
@@ -1548,7 +1548,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10ca8f90>"
+       "<matplotlib.legend.Legend at 0x10c3bf90>"
       ]
      },
      "execution_count": 7,
@@ -1719,7 +1719,7 @@
        "DGpJkgJmUEuSFLD/D7Yq0QDTVNEbAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108f0130>"
+       "<matplotlib.figure.Figure at 0x109202d0>"
       ]
      },
      "metadata": {},
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1789,7 +1789,7 @@
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Sun Jun 21 22:15:22 2015 South Africa Standard Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Wed Jun 24 21:26:19 2015 South Africa Standard Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -1802,7 +1802,7 @@
        "matplotlib & 1.4.3 \\\\ \\hline\n",
        "pandas & 0.15.2 \\\\ \\hline\n",
        "pvlib & 0.2.0dev \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Sun Jun 21 22:15:22 2015 South Africa Standard Time} \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Wed Jun 24 21:26:19 2015 South Africa Standard Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -1815,10 +1815,10 @@
        "matplotlib 1.4.3\n",
        "pandas 0.15.2\n",
        "pvlib 0.2.0dev\n",
-       "Sun Jun 21 22:15:22 2015 South Africa Standard Time"
+       "Wed Jun 24 21:26:19 2015 South Africa Standard Time"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
