--- a/docs/tutorials/solarposition.ipynb
+++ b/docs/tutorials/solarposition.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -503,7 +503,7 @@
        "SUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x106d7f10>"
+       "<matplotlib.figure.Figure at 0x105b3050>"
       ]
      },
      "metadata": {},
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -538,10 +538,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x10ccb190>"
+       "<matplotlib.text.Text at 0x10ba1f50>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -876,7 +876,7 @@
        "UqlUKhlTDXmlUqlUKhnzX0FyTowMHdR1AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1092a5f0>"
+       "<matplotlib.figure.Figure at 0x10845470>"
       ]
      },
      "metadata": {},
@@ -1241,7 +1241,7 @@
        "HBOBPAiCIAhyTATyIAiCIMgx/wexhkC8Q/Y6lQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10933510>"
+       "<matplotlib.figure.Figure at 0x108da310>"
       ]
      },
      "metadata": {},
@@ -1602,7 +1602,7 @@
        "qWBZyFNKKaWCZSFPKaWUCpaFPKWUUirY/wG+RAOj5Kit3QAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10af6c70>"
+       "<matplotlib.figure.Figure at 0x10a8ba90>"
       ]
      },
      "metadata": {},
@@ -1913,7 +1913,7 @@
        "A5IAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10c3f730>"
+       "<matplotlib.figure.Figure at 0x10bc8730>"
       ]
      },
      "metadata": {},
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -2339,7 +2339,7 @@
        "SqVSqVQy5n+pXNx2MaXuWgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10b36170>"
+       "<matplotlib.figure.Figure at 0xe817350>"
       ]
      },
      "metadata": {},
@@ -2366,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -2755,7 +2755,7 @@
        "SUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10e76550>"
+       "<matplotlib.figure.Figure at 0x106f7cb0>"
       ]
      },
      "metadata": {},
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -2835,7 +2835,7 @@
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Sun Jun 21 22:14:46 2015 South Africa Standard Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Wed Jun 24 21:25:50 2015 South Africa Standard Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -2848,7 +2848,7 @@
        "matplotlib & 1.4.3 \\\\ \\hline\n",
        "pandas & 0.15.2 \\\\ \\hline\n",
        "pvlib & 0.2.0dev \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Sun Jun 21 22:14:46 2015 South Africa Standard Time} \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Wed Jun 24 21:25:50 2015 South Africa Standard Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -2861,10 +2861,10 @@
        "matplotlib 1.4.3\n",
        "pandas 0.15.2\n",
        "pvlib 0.2.0dev\n",
-       "Sun Jun 21 22:14:46 2015 South Africa Standard Time"
+       "Wed Jun 24 21:25:50 2015 South Africa Standard Time"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
