--- a/docs/tutorials/tmy.ipynb
+++ b/docs/tutorials/tmy.ipynb
@@ -914,7 +914,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10a20ed0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1104d970>"
       ]
      },
      "execution_count": 5,
@@ -1094,7 +1094,7 @@
        "pJIZxpIklcwwliSpZIaxJEklM4wlSSqZYSxJUsn+P9Lo+NHAVWT6AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10a20930>"
+       "<matplotlib.figure.Figure at 0xe7f8b30>"
       ]
      },
      "metadata": {},
@@ -1115,7 +1115,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x112fc510>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x113504d0>"
       ]
      },
      "execution_count": 6,
@@ -1429,7 +1429,7 @@
        "iEjK/j9Ngz4Au+nG3gAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11438cb0>"
+       "<matplotlib.figure.Figure at 0x1140b150>"
       ]
      },
      "metadata": {},
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1558,7 +1558,7 @@
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Sun Jun 21 22:14:29 2015 South Africa Standard Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Wed Jun 24 21:25:44 2015 South Africa Standard Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -1571,7 +1571,7 @@
        "matplotlib & 1.4.3 \\\\ \\hline\n",
        "pandas & 0.15.2 \\\\ \\hline\n",
        "pvlib & 0.2.0dev \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Sun Jun 21 22:14:29 2015 South Africa Standard Time} \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Wed Jun 24 21:25:44 2015 South Africa Standard Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -1584,10 +1584,10 @@
        "matplotlib 1.4.3\n",
        "pandas 0.15.2\n",
        "pvlib 0.2.0dev\n",
-       "Sun Jun 21 22:14:29 2015 South Africa Standard Time"
+       "Wed Jun 24 21:25:44 2015 South Africa Standard Time"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
