--- a/docs/tutorials/TS_2_Irradiance_functions.ipynb
+++ b/docs/tutorials/TS_2_Irradiance_functions.ipynb
@@ -204,7 +204,7 @@
     "\n",
     "TMY['AM'] = pvlib.atmosphere.relativeairmass(z=TMY.SunZen)\n",
     "\n",
-    "DFOut = pvlib.clearsky.disc(times=TMY.index,GHI=TMY.GHI, zenith=TMY.SunZen)\n",
+    "DFOut = pvlib.irradiance.disc(times=TMY.index,GHI=TMY.GHI, zenith=TMY.SunZen)\n",
     "\n",
     "TMY['DNI_gen_DISC'] = DFOut['DNI_gen_DISC']\n",
     "TMY['Kt_gen_DISC'] = DFOut['Kt_gen_DISC']\n",
@@ -615,7 +615,7 @@
        "Yzzx/0C6/Dh3NBc4AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x9bf3ff0>"
+       "<matplotlib.figure.Figure at 0x931ed50>"
       ]
      },
      "metadata": {},
@@ -770,7 +770,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10dbf350>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10c88230>"
       ]
      },
      "execution_count": 14,
@@ -1122,7 +1122,7 @@
        "QghhKylEQgghbCWFSAghhK2kEAkhhLCVFCIhhBC2+n8a8TfYPMrehgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10c6da90>"
+       "<matplotlib.figure.Figure at 0x10dd18b0>"
       ]
      },
      "metadata": {},
@@ -1139,31 +1139,9 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                              Perez  Hay-Davies  Isotropic      King  \\\n",
-      "Time                                                                   \n",
-      "1991-07-01 00:00:00-09:00  2.572408    2.355193   2.045164  2.274061   \n",
-      "1991-07-02 00:00:00-09:00  1.772558    1.611440   1.262366  1.530097   \n",
-      "1991-07-03 00:00:00-09:00  1.650559    1.552234   1.183060  1.464952   \n",
-      "1991-07-04 00:00:00-09:00  2.152997    1.975813   1.696217  1.940927   \n",
-      "1991-07-05 00:00:00-09:00  2.765992    2.508697   2.140331  2.378945   \n",
-      "\n",
-      "                            Klucher    Reindl  \n",
-      "Time                                           \n",
-      "1991-07-01 00:00:00-09:00  2.460757  2.370208  \n",
-      "1991-07-02 00:00:00-09:00  1.629448  1.620249  \n",
-      "1991-07-03 00:00:00-09:00  1.524691  1.559837  \n",
-      "1991-07-04 00:00:00-09:00  2.061894  1.988623  \n",
-      "1991-07-05 00:00:00-09:00  2.647694  2.525730  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(daily[models]).head()"
+    "# print(daily[models]).head()"
    ]
   },
   {
@@ -1441,7 +1419,7 @@
        "RIQQQuRNkogQQoi8/T8rCLEuQYMcGwAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x112fe150>"
+       "<matplotlib.figure.Figure at 0x10d3b170>"
       ]
      },
      "metadata": {},
@@ -1759,7 +1737,7 @@
        "wjcKIkIIIXyjICKEEMI3/x/0ynlAipIe4QAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1137d230>"
+       "<matplotlib.figure.Figure at 0x10d3b4d0>"
       ]
      },
      "metadata": {},
@@ -1781,7 +1759,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x113a02d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x13091c90>"
       ]
      },
      "execution_count": 18,
@@ -2076,7 +2054,7 @@
        "Y4wxJo7YxG2MMcbEkf8fgvJVq2K58T8AAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11322cf0>"
+       "<matplotlib.figure.Figure at 0x10d2be10>"
       ]
      },
      "metadata": {},
@@ -2104,7 +2082,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12a16490>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11d963d0>"
       ]
      },
      "execution_count": 19,
@@ -2326,7 +2304,7 @@
        "FCIiEkiNQkREAv1/mdT18Ax9c5YAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x12857d50>"
+       "<matplotlib.figure.Figure at 0x9305b50>"
       ]
      },
      "metadata": {},
@@ -2350,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -2394,7 +2372,7 @@
        ]
       },
       "text/html": [
-       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Sun Jun 21 22:15:48 2015 South Africa Standard Time</td></tr></table>"
+       "<table><tr><th>Software</th><th>Version</th></tr><tr><td>Python</td><td>2.7.8 32bit [MSC v.1500 32 bit (Intel)]</td></tr><tr><td>IPython</td><td>3.0.0</td></tr><tr><td>OS</td><td>Windows 7 6.1.7601 SP1</td></tr><tr><td>numpy</td><td>1.9.2</td></tr><tr><td>scipy</td><td>0.15.1</td></tr><tr><td>matplotlib</td><td>1.4.3</td></tr><tr><td>pandas</td><td>0.15.2</td></tr><tr><td>pvlib</td><td>0.2.0dev</td></tr><tr><td colspan='2'>Wed Jun 24 21:26:50 2015 South Africa Standard Time</td></tr></table>"
       ],
       "text/latex": [
        "\\begin{tabular}{|l|l|}\\hline\n",
@@ -2407,7 +2385,7 @@
        "matplotlib & 1.4.3 \\\\ \\hline\n",
        "pandas & 0.15.2 \\\\ \\hline\n",
        "pvlib & 0.2.0dev \\\\ \\hline\n",
-       "\\hline \\multicolumn{2}{|l|}{Sun Jun 21 22:15:48 2015 South Africa Standard Time} \\\\ \\hline\n",
+       "\\hline \\multicolumn{2}{|l|}{Wed Jun 24 21:26:50 2015 South Africa Standard Time} \\\\ \\hline\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -2420,10 +2398,10 @@
        "matplotlib 1.4.3\n",
        "pandas 0.15.2\n",
        "pvlib 0.2.0dev\n",
-       "Sun Jun 21 22:15:48 2015 South Africa Standard Time"
+       "Wed Jun 24 21:26:50 2015 South Africa Standard Time"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2432,15 +2410,6 @@
     "%load_ext version_information\n",
     "%version_information numpy, scipy, matplotlib, pandas, pvlib"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
