minor changes to intro text

--- a/docs/tutorials/pvsystem.ipynb
+++ b/docs/tutorials/pvsystem.ipynb
@@ -28,7 +28,7 @@
     "* IPython 3.2\n",
     "* Pandas 0.16.2\n",
     "\n",
-    "It should work with other Python and Pandas versions. It requires pvlib > 0.2.0 and IPython > 3.0.\n",
+    "It should work with other Python and Pandas versions. It requires pvlib >= 0.2.0 and IPython >= 3.0.\n",
     "\n",
     "Authors:\n",
     "* Will Holmgren (@wholmgren), University of Arizona. 2015."
@@ -36,34 +36,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "# built-in python modules\n",
+    "import os\n",
+    "import inspect\n",
+    "\n",
+    "# scientific python add-ons\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# plotting stuff\n",
+    "# first line makes the plots appear in the notebook\n",
+    "%matplotlib inline \n",
     "import matplotlib.pyplot as plt\n",
+    "# seaborn makes your plots look better\n",
     "try:\n",
     "    import seaborn as sns\n",
     "    sns.set(rc={\"figure.figsize\": (12, 6)})\n",
     "except ImportError:\n",
     "    print('We suggest you install seaborn using conda or pip and rerun this cell')\n",
     "\n",
-    "# built in python modules\n",
-    "import datetime\n",
-    "import logging\n",
-    "import os\n",
-    "import inspect\n",
-    "\n",
-    "try:\n",
-    "    from importlib import reload\n",
-    "except:\n",
-    "    pass\n",
-    "\n",
-    "# python add-ons\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "# finally, we import the pvlib library\n",
+    "import pvlib"
    ]
   },
   {
