--- a/docs/tutorials/tmy_to_power.ipynb
+++ b/docs/tutorials/tmy_to_power.ipynb
@@ -21,6 +21,8 @@
     "* IPython 3.2\n",
     "* pandas 0.16.2\n",
     "\n",
+    "It should work with other Python and Pandas versions. It requires pvlib >= 0.2.0 and IPython >= 3.0.\n",
+    "\n",
     "Authors:\n",
     "* Will Holmgren (@wholmgren), University of Arizona, July 2015\n",
     "* Rob Andrews (@Calama-Consulting), Heliolytics, June 2014"
