--- a/docs/tutorials/irradiance.ipynb
+++ b/docs/tutorials/irradiance.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# irradiance.py"
+    "# irradiance.py tutorial"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "* IPython 3.2\n",
     "* pandas 0.16.2\n",
     "\n",
-    "It should work with other versions.\n",
+    "It should work with other Python and Pandas versions. It requires pvlib >= 0.2.0 and IPython >= 3.0.\n",
     "\n",
     "Authors:\n",
     "* Will Holmgren (@wholmgren), University of Arizona. July 2014, April 2015, July 2015."
