moving back to older but working files after the mess up with upstream rebase

--- a/docs/tutorials/status.ipynb
+++ b/docs/tutorials/status.ipynb
@@ -11,21 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20150711\n",
+    "20150712\n",
     "\n",
     "SHA baaf1f14\n",
     "\n",
-    "|?|Notebook | Status|\n",
-    "|-|--|--|\n",
-    "|+|ET_irradiance.ipynb            |completes to the end, results not yet validated|\n",
-    "|+|TS_2_Irradiance_functions.ipynb|solar zenith not correct, completes to the end, results not yet validated|\n",
-    "|-|Test_Scripts_1.ipynb           |solar zenith not correct, completes to the end, results not yet validated|\n",
-    "|+|atmosphere.ipynb               |completes to the end, results not yet validated|\n",
-    "|-|irradiance.ipynb               |solar zenith not correct, completes to the end, results not yet validated|\n",
-    "|-|pvsystem.ipynb                 |single diode model dataframe has NaN |\n",
-    "|+|solarposition.ipynb            |completes to the end, results not yet validated|\n",
-    "|+|tmy.ipynb                      |completes to the end, results not yet validated|\n",
-    "|+|tracking.ipynb                 |completes to the end, results not yet validated|\n"
+    "|Notebook | Status|\n",
+    "|--|--|\n",
+    "|ET_irradiance.ipynb            |completes to the end, results not yet validated|\n",
+    "|TS_2_Irradiance_functions.ipynb|solar zenith not correct, completes to the end, results not yet validated|\n",
+    "|Test_Scripts_1.ipynb           |solar zenith not correct, completes to the end, results not yet validated|\n",
+    "|atmosphere.ipynb               |completes to the end, results not yet validated|\n",
+    "|irradiance.ipynb               |solar zenith not correct, completes to the end, results not yet validated|\n",
+    "|pvsystem.ipynb                 |single diode model dataframe has NaN |\n",
+    "|solarposition.ipynb            |completes to the end, results not yet validated|\n",
+    "|tmy.ipynb                      |completes to the end, results not yet validated|\n",
+    "|tracking.ipynb                 |completes to the end, results not yet validated|\n"
    ]
   },
   {
