--- a/docs/tutorials/pvsystem.ipynb
+++ b/docs/tutorials/pvsystem.ipynb
@@ -121,8 +121,8 @@
        " 'latitude': 55.317,\n",
        " 'longitude': -160.517,\n",
        " 'name': '\"SAND POINT\"',\n",
-       " 'parallel_modules': 5,\n",
-       " 'series_modules': 5,\n",
+       " 'strings_per_inverter': 5,\n",
+       " 'modules_per_string': 5,\n",
        " 'surface_azimuth': 0,\n",
        " 'surface_tilt': 0,\n",
        " 'tz': -9.0}"
@@ -152,8 +152,8 @@
        " 'latitude': 25.8,\n",
        " 'longitude': -80.26666666666667,\n",
        " 'name': 'MIAMI',\n",
-       " 'parallel_modules': 5,\n",
-       " 'series_modules': 5,\n",
+       " 'strings_per_inverter': 5,\n",
+       " 'modules_per_string': 5,\n",
        " 'surface_azimuth': 0,\n",
        " 'surface_tilt': 0,\n",
        " 'tz': -5}"
