add explicit tests for aoi and aoi projection functions

--- a/docs/sphinx/source/whatsnew/v0.4.6.rst
+++ b/docs/sphinx/source/whatsnew/v0.4.6.rst
@@ -24,6 +24,12 @@ Documentation
 ~~~~~~~~~~~~~
 
 
+Testing
+~~~~~~~
+
+* Added explicit tests for aoi and aoi_projection functions.
+
+
 Contributors
 ~~~~~~~~~~~~
 
