Add changes to whats new

--- a/docs/sphinx/source/whatsnew/v0.4.6.rst
+++ b/docs/sphinx/source/whatsnew/v0.4.6.rst
@@ -14,7 +14,7 @@ Bug fixes
 
 Enhancements
 ~~~~~~~~~~~~
-
+* Added default values to docstrings of all functions (:issue:`336`)
 
 API Changes
 ~~~~~~~~~~~
@@ -30,3 +30,4 @@ Contributors
 * Will Holmgren
 * Uwe Krien
 * Alaina Kafkes
+* Birgit Schachler
