Update the whatsnew/v0.4.6.rst file with the bug fix and the test update.

--- a/docs/sphinx/source/whatsnew/v0.4.6.rst
+++ b/docs/sphinx/source/whatsnew/v0.4.6.rst
@@ -10,6 +10,8 @@ Bug fixes
 * Method of multi-inheritance has changed to make it possible to use kwargs in
   the parent classes of LocalizedPVSystem and LocalizedSingleAxisTracker
   (:issue:`330`)
+* Fix the `__repr__` method of `ModelChain`, crashing when
+  `orientation_strategy` is set to `'None'` (:issue:`352`)
 
 
 Enhancements
@@ -28,6 +30,7 @@ Testing
 ~~~~~~~
 
 * Added explicit tests for aoi and aoi_projection functions.
+* Update test of `ModelChain.__repr__` to take in account :issue:`352`
 
 
 Contributors
@@ -37,3 +40,4 @@ Contributors
 * Uwe Krien
 * Alaina Kafkes
 * Birgit Schachler
+* Jonathan Gaffiot
