--- a/docs/sphinx/source/whatsnew/v0.4.6.rst
+++ b/docs/sphinx/source/whatsnew/v0.4.6.rst
@@ -12,6 +12,8 @@ Bug fixes
   (:issue:`330`)
 * Fix the `__repr__` method of `ModelChain`, crashing when
   `orientation_strategy` is set to `'None'` (:issue:`352`)
+* Fix the `ModelChain`'s angle of incidence calculation for
+  SingleAxisTracker objects (:issue:`351`)
 
 
 Enhancements
@@ -21,6 +23,8 @@ Enhancements
 API Changes
 ~~~~~~~~~~~
 * Removed parameter w from _calc_d (:issue:`344`)
+* SingleAxisTracker.get_aoi now requires surface_zenith and surface_azimuth
+  (:issue:`351`)
 
 Documentation
 ~~~~~~~~~~~~~
