Add analytical azimuth method to solarposition.py. (#349)
* Add analytical azimuth method.

* Number linked references.

* Add test for solar_azimuth_analytical.

* Add an entry in the api.rst file.

* Correct for different azimuth convention.

* Update test tolerance.

Not as accurate when azimuth angle is close to due north.

* Added an entry in the v0.4.6 whatsnew file.

* Update assert statements.

* Update threshold for `atol=0.55` assert statement.

* Update test, only when the sun is above horizon.

Loops no longer needed.

--- a/docs/sphinx/source/whatsnew/v0.4.6.rst
+++ b/docs/sphinx/source/whatsnew/v0.4.6.rst
@@ -17,6 +17,7 @@ Bug fixes
 Enhancements
 ~~~~~~~~~~~~
 * Added default values to docstrings of all functions (:issue:`336`)
+* Added analytical method that calculates solar azimuth angle (:issue:`291`)
 
 API Changes
 ~~~~~~~~~~~
@@ -31,6 +32,7 @@ Testing
 
 * Added explicit tests for aoi and aoi_projection functions.
 * Update test of `ModelChain.__repr__` to take in account :issue:`352`
+* Added a test for solar_azimuth_analytical function.
 
 
 Contributors
@@ -41,3 +43,4 @@ Contributors
 * Alaina Kafkes
 * Birgit Schachler
 * Jonathan Gaffiot
+* Siyan (Veronica) Guo
