--- a/docs/sphinx/source/whatsnew/v0.4.6.rst
+++ b/docs/sphinx/source/whatsnew/v0.4.6.rst
@@ -12,6 +12,8 @@ Bug fixes
   (:issue:`330`)
 * Fix the `__repr__` method of `ModelChain`, crashing when
   `orientation_strategy` is set to `'None'` (:issue:`352`)
+* Fix the `ModelChain`'s angle of incidence calculation for
+  SingleAxisTracker objects (:issue:`351`)
 
 
 Enhancements
@@ -19,9 +21,13 @@ Enhancements
 * Added default values to docstrings of all functions (:issue:`336`)
 * Added analytical method that calculates solar azimuth angle (:issue:`291`)
 
+
 API Changes
 ~~~~~~~~~~~
 * Removed parameter w from _calc_d (:issue:`344`)
+* SingleAxisTracker.get_aoi and SingleAxisTracker.get_irradiance
+  now require surface_zenith and surface_azimuth (:issue:`351`)
+
 
 Documentation
 ~~~~~~~~~~~~~
