--- a/docs/sphinx/source/whatsnew/v0.5.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.0.rst
@@ -1,29 +1,48 @@
 .. _whatsnew_0500:
 
-v0.5.0 ()
----------
-
-
-Bug fixes
-~~~~~~~~~
-
-
-Enhancements
-~~~~~~~~~~~~
-
+v0.5.0 (August 10, 2017)
+------------------------
 
 API Changes
 ~~~~~~~~~~~
+* Removed parameter w from _calc_d (:issue:`344`)
+* SingleAxisTracker.get_aoi and SingleAxisTracker.get_irradiance
+  now require surface_zenith and surface_azimuth (:issue:`351`)
+* Changes calculation of the Incidence Angle Modifier to return 0
+  instead of np.nan for angles >= 90°. This improves the calculation of
+  effective irradiance close to sunrise and sunset. (:issue:`338`)
 
-* Changes calculation of the Incidence Angle Modifier to return 0 instead of np.nan for angles >= 90°.
-  This improves the calculation of effective irradiance close to sunrise and sunset. (:issue:`338`)
+Bug fixes
+~~~~~~~~~
+* Method of multi-inheritance has changed to make it possible to use kwargs in
+  the parent classes of LocalizedPVSystem and LocalizedSingleAxisTracker
+  (:issue:`330`)
+* Fix the `__repr__` method of `ModelChain`, crashing when
+  `orientation_strategy` is set to `'None'` (:issue:`352`)
+* Fix the `ModelChain`'s angle of incidence calculation for
+  SingleAxisTracker objects (:issue:`351`)
 
+Enhancements
+~~~~~~~~~~~~
+* Added default values to docstrings of all functions (:issue:`336`)
+* Added analytical method that calculates solar azimuth angle (:issue:`291`)
 
 Documentation
 ~~~~~~~~~~~~~
 
 
+Testing
+~~~~~~~
+* Added explicit tests for aoi and aoi_projection functions.
+* Update test of `ModelChain.__repr__` to take in account :issue:`352`
+* Added a test for solar_azimuth_analytical function.
+
 Contributors
 ~~~~~~~~~~~~
-
 * Johannes Kaufmann
+* Will Holmgren
+* Uwe Krien
+* Alaina Kafkes
+* Birgit Schachler
+* Jonathan Gaffiot
+* Siyan (Veronica) Guo
