fix some references, minor edits

--- a/docs/sphinx/source/modelchain.ipynb
+++ b/docs/sphinx/source/modelchain.ipynb
@@ -13,15 +13,15 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "The :py:class:`~pvlib.modelchain.ModelChain` class provides a high-level interface for standardized PV modeling. The class aims to automate much of the modeling process while providing user-control and remaining extensible. This guide aims to build users' understanding of the ModelChain class. It assumes some familiarity with object-oriented code in Python, but most information should be understandable even without a solid understanding of classes.\n",
+    "The :py:class:`~.modelchain.ModelChain` class provides a high-level interface for standardized PV modeling. The class aims to automate much of the modeling process while providing user-control and remaining extensible. This guide aims to build users' understanding of the ModelChain class. It assumes some familiarity with object-oriented code in Python, but most information should be understandable even without a solid understanding of classes.\n",
     "\n",
-    "A :py:class:`~pvlib.modelchain.ModelChain` is composed of a :py:class:`~pvlib.pvsystem.PVSystem` object and a :py:class:`~pvlib.location.Location` object. A PVSystem object represents an assembled collection of modules, inverters, etc., a Location object represents a particular place on the planet, and a ModelChain object describes the modeling chain used to calculate a system's output at that location. The PVSystem and Location objects will be described in detail in another guide.\n",
+    "A :py:class:`~.modelchain.ModelChain` is composed of a :py:class:`~.pvsystem.PVSystem` object and a :py:class:`~.location.Location` object. A PVSystem object represents an assembled collection of modules, inverters, etc., a Location object represents a particular place on the planet, and a ModelChain object describes the modeling chain used to calculate a system's output at that location. The PVSystem and Location objects will be described in detail in another guide.\n",
     "\n",
-    "Modeling with a ModelChain typically involves 3 steps:\n",
+    "Modeling with a :py:class:`~.ModelChain` typically involves 3 steps:\n",
     "\n",
-    "1. Creating the ModelChain.\n",
-    "2. Executing the ModelChain.run_model method with prepared weather data.\n",
-    "3. Examining the model results that run_model stored in attributes of the ModelChain."
+    "1. Creating the :py:class:`~.ModelChain`.\n",
+    "2. Executing the :py:meth:`ModelChain.run_model() <.ModelChain.run_model>` method with prepared weather data.\n",
+    "3. Examining the model results that :py:meth:`~.ModelChain.run_model` stored in attributes of the :py:class:`~.ModelChain`."
    ]
   },
   {
@@ -79,6 +79,24 @@
     "                  module_parameters=sandia_module,\n",
     "                  inverter_parameters=cec_inverter)\n",
     "mc = ModelChain(system, location)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing a ModelChain object will display its models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(mc)"
    ]
   },
   {
@@ -154,11 +172,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining a ModelChain\n",
+    "## Defining a ModelChain"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    "A :py:class:`~pvlib.modelchain.ModelChain` object is defined by:\n",
     "\n",
-    "A ModelChain object is defined by:\n",
-    "\n",
-    "1. The properties of its Location and PVSystem objects\n",
+    "1. The properties of its :py:class:`~pvlib.pvsystem.PVSystem` and :py:class:`~pvlib.location.Location` objects\n",
     "2. The keyword arguments passed to it at construction\n",
     "\n",
     "ModelChain uses the keyword arguments passed to it to determine the models for the simulation. The documentation describes the allowed values for each keyword argument. If a keyword argument is not supplied, ModelChain will attempt to infer the correct set of models by inspecting the Location and PVSystem attributes. \n",
@@ -227,10 +252,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
    "source": [
-    "As expected, without additional information, the ModelChain fails at run time."
+    "As expected, without additional information, the :py:meth:`~.ModelChain.run_model` method fails at run time."
    ]
   },
   {
@@ -245,10 +272,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
    "source": [
-    "The ModelChain attempted to execute the PVSystem object's ``singlediode`` method, and the method failed because the object's ``module_parameters`` did not include the data necessary to run the model. "
+    "The ModelChain attempted to execute the PVSystem object's :py:meth:`~pvlib.pvsystem.PVSystem.singlediode` method, and the method failed because the object's ``module_parameters`` did not include the data necessary to run the model. "
    ]
   },
   {
@@ -287,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will specify PVWatts-relevant information in the PVSystem construction. ModelChain will automatically determine that it should choose PVWatts DC and AC models. ModelChain still needs us to specify ``aoi_model`` and ``spectral_model`` keyword arguments because the ``system.module_parameters`` dictionary does not contain enough information to determine which of those models to choose."
+    "Alternatively, we could have specified single diode or PVWatts related information in the PVSystem construction. Here we pass PVWatts data to the PVSystem. ModelChain will automatically determine that it should choose PVWatts DC and AC models. ModelChain still needs us to specify ``aoi_model`` and ``spectral_model`` keyword arguments because the ``system.module_parameters`` dictionary does not contain enough information to determine which of those models to choose."
    ]
   },
   {
@@ -349,10 +378,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
    "source": [
-    "Of course, these choices can also lead to failure when executing ``run_model`` if your system objects do not contain the required parameters for running the model."
+    "Of course, these choices can also lead to failure when executing :py:meth:`~pvlib.modelchain.ModelChain.run_model` if your system objects do not contain the required parameters for running the model."
    ]
   },
   {
@@ -363,14 +394,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
    "source": [
     "The ModelChain class has a lot going in inside it in order to make users' code as simple as possible.\n",
     "\n",
     "The key parts of ModelChain are:\n",
     "\n",
-    "1. The run_model method\n",
+    "1. The :py:meth:`ModelChain.run_model() <.ModelChain.run_model>` method\n",
     "1. A set of methods that wrap and call the PVSystem methods.\n",
     "1. A set of methods that inspect user-supplied objects to determine the appropriate default models."
    ]
@@ -379,13 +412,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### run_model\n",
+    "### run_model"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    "Most users will only interact with the :py:meth:`~pvlib.modelchain.ModelChain.run_model` method. The :py:meth:`~pvlib.modelchain.ModelChain.run_model` method, shown below, calls a series of methods to complete the modeling steps. The first method, :py:meth:`~pvlib.modelchain.ModelChain.prepare_inputs`, computes parameters such as solar position, airmass, angle of incidence, and plane of array irradiance. The :py:meth:`~pvlib.modelchain.ModelChain.prepare_inputs` method also assigns default values for irradiance (clear sky), temperature (20 C), and wind speed (0 m/s) if these inputs are not provided.\n",
     "\n",
-    "Most users will only interact with the ModelChain.run_model method. The run_model method, shown below, calls a series of methods to complete the modeling steps. The first method, ModelChain.prepare_inputs, computes parameters such as solar position, airmass, angle of incidence, and plane of array irradiance. The prepare_inputs method also assigns default values for irradiance (clear sky), temperature (20 C), and wind speed (0 m/s) if these inputs are not provided.\n",
+    "Next, :py:meth:`~pvlib.modelchain.ModelChain.run_model` calls the wrapper methods for AOI loss, spectral loss, effective irradiance, cell temperature, DC power, AC power, and other losses. These methods are assigned to standard names, as described in the next section.\n",
     "\n",
-    "Next, ModelChain.run_model calls the wrapper methods for AOI loss, spectral loss, effective irradiance, cell temperature, DC power, AC power, and other losses. These methods are assigned to standard names, as described in the next section.\n",
-    "\n",
-    "The methods called by ModelChain.run_model store their results in a series of ModelChain attributes: ``times``, ``solar_position``, ``airmass``, ``irradiance``, ``total_irrad``, ``effective_irradiance``, ``weather``, ``temps``, ``aoi``, ``aoi_modifier``, ``spectral_modifier``, ``dc``, ``ac``, ``losses``."
+    "The methods called by :py:meth:`~pvlib.modelchain.ModelChain.run_model` store their results in a series of ModelChain attributes: ``times``, ``solar_position``, ``airmass``, ``irradiance``, ``total_irrad``, ``effective_irradiance``, ``weather``, ``temps``, ``aoi``, ``aoi_modifier``, ``spectral_modifier``, ``dc``, ``ac``, ``losses``."
    ]
   },
   {
@@ -400,10 +440,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
    "source": [
-    "Finally, the ModelChain.complete_irradiance method is available for calculating the full set of GHI, DNI, or DHI if only two of these three series are provided. The completed dataset can then be passed to ModelChain.run_model."
+    "Finally, the :py:meth:`~pvlib.modelchain.ModelChain.complete_irradiance` method is available for calculating the full set of GHI, DNI, or DHI if only two of these three series are provided. The completed dataset can then be passed to :py:meth:`~pvlib.modelchain.ModelChain.run_model`."
    ]
   },
   {
