--- a/docs/sphinx/source/whatsnew/v0.5.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.0.rst
@@ -33,7 +33,8 @@ Enhancements
 
 Documentation
 ~~~~~~~~~~~~~
-
+* Added ModelChain documentation page
+* Added nbsphinx to documentation build configuration.
 
 Testing
 ~~~~~~~
