--- a/docs/sphinx/source/whatsnew/v0.5.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.1.rst
@@ -10,6 +10,7 @@ API Changes
 Bug fixes
 ~~~~~~~~~
 * Remove condition causing Overflow warning from clearsky.haurwitz
+* modelchain.basic_chain now correctly passes 'solar_position_method' arg to solarposition.get_solarposition 
 
 Enhancements
 ~~~~~~~~~~~~
@@ -26,3 +27,4 @@ Testing
 Contributors
 ~~~~~~~~~~~~
 * Cliff Hansen
+* KonstantinTr
