--- a/docs/sphinx/source/whatsnew/v0.5.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.1.rst
@@ -11,6 +11,7 @@ Bug fixes
 ~~~~~~~~~
 * Remove condition causing Overflow warning from clearsky.haurwitz
 * modelchain.basic_chain now correctly passes 'solar_position_method' arg to solarposition.get_solarposition 
+* Doc string of modelchain.basic_chain was updated to describe args more accurately 
 
 Enhancements
 ~~~~~~~~~~~~
