solar_position_method arg passed to basic_chain method wasn't used (#370)
* fix for issue #343

Now, passed 'offset' parameter are used instead of it's default value.

* test for issue #343

* solar_position_method passed to basic_chain wasn't used causing
execution of solarposition.get_solarposition with default 'nrel_numpy'
value in all cases.

* Update modelchain.py

doc string fixes for modelchain.basic_chain function

* Update v0.5.1.rst

* Update v0.5.1.rst

--- a/docs/sphinx/source/whatsnew/v0.5.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.1.rst
@@ -10,6 +10,8 @@ API Changes
 Bug fixes
 ~~~~~~~~~
 * Remove condition causing Overflow warning from clearsky.haurwitz
+* modelchain.basic_chain now correctly passes 'solar_position_method' arg to solarposition.get_solarposition 
+* Doc string of modelchain.basic_chain was updated to describe args more accurately 
 
 Enhancements
 ~~~~~~~~~~~~
@@ -26,3 +28,4 @@ Testing
 Contributors
 ~~~~~~~~~~~~
 * Cliff Hansen
+* KonstantinTr
