--- a/docs/sphinx/source/whatsnew/v0.5.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.1.rst
@@ -10,8 +10,8 @@ API Changes
 Bug fixes
 ~~~~~~~~~
 * Remove condition causing Overflow warning from clearsky.haurwitz
-* modelchain.basic_chain now correctly passes 'solar_position_method' arg to solarposition.get_solarposition 
-* Doc string of modelchain.basic_chain was updated to describe args more accurately 
+* modelchain.basic_chain now correctly passes 'solar_position_method'
+  arg to solarposition.get_solarposition
 
 Enhancements
 ~~~~~~~~~~~~
@@ -19,7 +19,8 @@ Enhancements
 
 Documentation
 ~~~~~~~~~~~~~
-*
+* Doc string of modelchain.basic_chain was updated to describe args
+  more accurately
 
 Testing
 ~~~~~~~
