--- a/docs/sphinx/source/whatsnew/v0.5.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.1.rst
@@ -16,18 +16,35 @@ Bug fixes
 Enhancements
 ~~~~~~~~~~~~
 * Improve clearsky.lookup_linke_turbidity speed. (:issue:`368`)
+* Ideal devices supported in single diode model, e.g.,
+  resistance_series = 0 and/or resistance_shunt = numpy.inf (:issue:`340`)
+* `pvsystem.v_from_i` and `pvsystem.i_from_v` computations for near ideal
+  devices are more numerically stable. However, very, very near ideal
+  resistance_series and/or resistance_shunt may still cause issues with the
+  implicit solver (:issue:`340`)
+
+API Changes
+~~~~~~~~~~~
+* `pvsystem.v_from_i` and `pvsystem.i_from_v` functions now accept
+  resistance_series = 0 and/or resistance_shunt = numpy.inf as inputs
+  (:issue:`340`)
 
 Documentation
 ~~~~~~~~~~~~~
 * Doc string of modelchain.basic_chain was updated to describe args
   more accurately
+* Doc strings of `singlediode`, `pvsystem.v_from_i`, and `pvsystem.i_from_v`
+  were updated to describe acceptable input arg ranges
 
 Testing
 ~~~~~~~
 * Changed test for clearsky.haurwitz to operate on zenith angles
+* Significant new test cases added for `pvsystem.v_from_i` and
+  `pvsystem.i_from_v` (:issue:`340`)
 
 Contributors
 ~~~~~~~~~~~~
 * Cliff Hansen
 * KonstantinTr
 * Will Holmgren
+* Mark Campanelli
