Pyephem args missmatch (#381)
* fix for issue #343

Now, passed 'offset' parameter are used instead of it's default value.

* test for issue #343

* solar_position_method passed to basic_chain wasn't used causing
execution of solarposition.get_solarposition with default 'nrel_numpy'
value in all cases.

* Update modelchain.py

doc string fixes for modelchain.basic_chain function

* Update v0.5.1.rst

* Update v0.5.1.rst

* Update v0.5.1.rst

* altitude arg was missing.
Consequentially, pressure was passed to altitude and
 temperature was passed to pressure.

* Test for get_solarposition with method='pyephem'

Should prevent args mismatch described in #374
This function is basically a copy of  test_get_solarposition_no_kwargs modified to call get_solarposition  with method='pyephem'

* Update v0.5.1.rst

* Now we pass keyword arguments instead of positional to be safe and consistent.

* decorate test_get_solarposition_method_pyephem with @requires_ephem

--- a/docs/sphinx/source/whatsnew/v0.5.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.1.rst
@@ -14,6 +14,8 @@ Bug fixes
   arg to solarposition.get_solarposition
 * Removed unnecessary calculations of alpha_prime in spa.solar_position_numpy
   and spa.solar_position_loop
+* Fixed args mismatch for solarposition.pyephem call 
+  from solarposition.get_solarposition with method='pyephem'
 
 Enhancements
 ~~~~~~~~~~~~
