--- a/docs/sphinx/source/whatsnew/v0.5.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.1.rst
@@ -12,6 +12,7 @@ Bug fixes
 * Remove condition causing Overflow warning from clearsky.haurwitz
 * modelchain.basic_chain now correctly passes 'solar_position_method'
   arg to solarposition.get_solarposition
+* Fixed: `Variables and Symbols extra references not available <https://github.com/pvlib/pvlib-python/issues/380>`_
 * Removed unnecessary calculations of alpha_prime in spa.solar_position_numpy
   and spa.solar_position_loop
 * Fixed args mismatch for solarposition.pyephem call 
