--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -21,7 +21,7 @@ Documentation
 
 Testing
 ~~~~~~~
-*
+* Test Python 3.6 on Windows with Appveyor instead of 3.4. (:issue:`392`)
 
 Contributors
 ~~~~~~~~~~~~
