--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -17,7 +17,7 @@ Bug fixes
 
 Documentation
 ~~~~~~~~~~~~~
-*
+* added link to `Stack Overflow <https://stackoverflow.com/questions/tagged/pvlib/>`_
 
 Testing
 ~~~~~~~
