removes unused pressure arg from Irradiance.liujordan function (#389)
* fix for issue #343

Now, passed 'offset' parameter are used instead of it's default value.

* test for issue #343

* solar_position_method passed to basic_chain wasn't used causing
execution of solarposition.get_solarposition with default 'nrel_numpy'
value in all cases.

* Update modelchain.py

doc string fixes for modelchain.basic_chain function

* Update v0.5.1.rst

* Update v0.5.1.rst

* Update v0.5.1.rst

* Update v0.5.1.rst

* Update v0.5.1.rst

* fix for issue #386

* what's new for issue #386

* test update for issue #386

* Update conftest.py

* Update test_irradiance.py

* Update v0.5.2.rst

* Update v0.5.2.rst

--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -5,7 +5,7 @@ v0.5.2 (__, 2017)
 
 API Changes
 ~~~~~~~~~~~
-*
+* removed unused 'pressure' arg from irradiance.liujordan function (:issue:`386`)
 
 Enhancements
 ~~~~~~~~~~~~
