--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -14,6 +14,8 @@ Enhancements
 Bug fixes
 ~~~~~~~~~
 * fixed redeclaration of test_simplified_solis_series_elevation (:issue:`387`)
+* physicaliam now returns a Series if called with a Series as an
+  argument. (:issue:`397`)
 
 Documentation
 ~~~~~~~~~~~~~
