make physicaliam return a Series if called with a Series (#398)
* physicaliam now preserves series type

* update whatsnew

* improve docstring

* add github issue note to test

--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -14,10 +14,12 @@ Enhancements
 Bug fixes
 ~~~~~~~~~
 * fixed redeclaration of test_simplified_solis_series_elevation (:issue:`387`)
+* physicaliam now returns a Series if called with a Series as an
+  argument. (:issue:`397`)
 
 Documentation
 ~~~~~~~~~~~~~
-*
+* Improve physicaliam doc string. (:issue:`397`)
 
 Testing
 ~~~~~~~
