--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -9,7 +9,16 @@ API Changes
 
 Enhancements
 ~~~~~~~~~~~~
-*
+* Implement a reliable "gold" implementation of the single diode model (SDM)
+  using a bisection method (Brent, 1973) bounded by points known to include the
+  full forward-bias 1st quadrant IV-curve. Also implement a "fast" method using
+  a gradient decent method (Newton-Raphson) that is not bounded, but should be
+  safe for well behaved IV-curves. (:issue:`408`)
+* Combine existing :func:`~pvlib.pvsystem.singlediode` method using Lambert-W
+  with the two new implementations to form a wrapper, that takes an additional
+  ``method`` argument ``('lambertw', 'fast')`` that defaults to the new "gold"
+  bounded bisection method. (:issue:`410`)
+* Add :func:`~pvlib.pvsystem.mppt` method to compute the max power point.
 
 Bug fixes
 ~~~~~~~~~
@@ -31,5 +40,6 @@ Contributors
 * Cliff Hansen
 * Will Holmgren
 * KonstantinTr
+* Mark Mikofski
 
 
