--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -25,6 +25,7 @@ Testing
 ~~~~~~~
 * Test Python 3.6 on Windows with Appveyor instead of 3.4. (:issue:`392`)
 * Fix failing test on pandas 0.22 (:issue:`406`)
+* Fix too large test tolerance (:issue:`414`)
 
 Contributors
 ~~~~~~~~~~~~
