--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -14,11 +14,19 @@ Enhancements
   full forward-bias 1st quadrant IV-curve. Also implement a "fast" method using
   a gradient descent method (Newton-Raphson) that is not bounded, but should be
   safe for well behaved IV-curves. (:issue:`408`)
+* Implement :func:`~pvlib.pvsystem.bishop88` for explicit calculation of
+  arbitrary IV curve points using diode voltage instead of cell voltage. This
+  method is called for ``ivcurve_pnts`` in :func:`~pvlib.pvsystem.singlediode`
+  if the method is either ``'fast'`` or ``'gold'``, but the IV curve points will
+  be log spaced instead of linear.
+* Implement :func:`~pvlib.pvsystem.est_voc` to estimate open circuit voltage by
+  assuming :math:`R_{sh} \to \infty`. This is used as an upper bound in
+  bisection method for :func:`~pvlib.pvsystem.singlediode`.
 * Combine existing :func:`~pvlib.pvsystem.singlediode` method using Lambert-W
   with the two new implementations to form a wrapper, that takes an additional
-  ``method`` argument ``('lambertw', 'fast')`` that defaults to the new "gold"
-  bounded bisection method. (:issue:`410`)
-* Add :func:`~pvlib.pvsystem.mppt` method to compute the max power point.
+  ``method`` argument ``('lambertw', 'fast', 'gold')`` that defaults to the new
+  "gold" bounded bisection method. (:issue:`410`)
+* Add :func:`~pvlib.pvsystem.mpp` method to compute the max power point.
 
 Bug fixes
 ~~~~~~~~~
